--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ terraform:
   volumes:
     - ~/.ssh/id_rsa.pub:/root/.ssh/id_rsa.pub:ro
     - ./output:/output
-    - ./terraform.tfstate:/terraform/terraform.tfstate
     - ssh-agent:/ssh-agent
+    - ./:/terraform
   environment:
     - AWS_ACCESS_KEY_ID
     - AWS_SECRET_ACCESS_KEY
