--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,8 +4,8 @@ on:
 env:
   tf_version: 'latest'
 jobs:
-  terraform:
-    name: 'Terraform'
+  format:
+    name: 'Format'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
