--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,12 +36,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           COMMIT_MSG: terraform fmt
+          BRANCH: ${{ github.head_ref }}
         run: |
-          set -x
-          
           git config user.email "terraform@github.com"
           git config user.name "Terraform"
 
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "${COMMIT_MSG}"; git push origin ${GITHUB_REF##*/})
+          git diff --quiet && git diff --staged --quiet || (git commit -m "${COMMIT_MSG}"; git push origin ${BRANCH})
