--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,15 +32,10 @@ jobs:
           tf_actions_fmt_write: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Commit to repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-          COMMIT_MSG: terraform fmt
-          BRANCH: ${{ github.head_ref }}
-        run: |
-          git config user.email "terraform@github.com"
-          git config user.name "Terraform"
-
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "${COMMIT_MSG}"; git push origin ${BRANCH})
+     - uses: stefanzweifel/git-auto-commit-action@v4.1.6
+       with:
+         commit_message: terraform fmt
+         branch: ${{ github.head_ref }}
+        commit_user_name: terraformbot
+        commit_user_email: terraform@github.com
+        commit_author: Terraform <terraform@github.com>
